Setup server homepage

--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./bootstrap.min.css" />
     <link rel="stylesheet" href="./styles.css" />
 
     <title>Kuet Radio Song Broadcasting Server</title>
   </head>
-  <body></body>
+  <body
+    class="w-100 h-100 d-flex align-items-center justify-content-center flex-wrap align-content-center"
+  >
+    <h1 class="text-success w-100 text-center">
+      KUET-Radio <br />
+      Song Broadcasting Server
+    </h1>
+    <h2 class="text-success mt-3">is running.....</h2>
+    <h4 class="mt-5 w-100 text-center">
+      <a class="text-info" href="https://www.kuetradio.org">
+        Click here to listen Broadcasting
+      </a>
+    </h4>
+    <div class="developer-intro">
+      Developed by
+      <a class="text-info" href="https://www.showrin.com" target="_blank">
+        Showrin Barua
+      </a>
+    </div>
+  </body>
 </html>
